# iacs

./: .gitignore  .mcp.json  CLAUDE.md  README.md  app.js  app.py  example.yaml  index.html  mkdocs.yml  pyproject.toml  setup.sh  styles.css  yaml-parser.js
.claude/: settings.json
.claude/agents/: dataflow-designer.md  entity-yaml-formatter.md  function-implementer.md
.claude/hooks/: session-start.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  jekyll-gh-pages.yml  publish.yml
builtins/: components.yaml  format_guide.yaml  iacs.yaml
components/: components.yaml  iacs.yaml  iacs_system.yaml
docs/: gen_dag_images.py  gen_ref_pages.py  index.md  mcp.md  visualizations.md
docs/api/: architect.md  iacs.md  mcp_server.md  registry.md  utils.md
docs/dataflows/: index.md
examples/cost-impact/: manifest.yaml
examples/example/: expected.py  manifest.yaml  manifest_alt.yaml
examples/game_data/: manifest.yaml
examples/impact-cost_analysis/: manifest.yaml
examples/minimal/: expected.py  minimal.yaml  minimal_alt.yaml
examples/minimal2/: minimal2.yaml  minimal2_alt.yaml
examples/networks/: net_AB.yaml  net_ABCD.yaml
examples/relational_data/: expected.py  orders.csv  products.csv  schema.yaml  users.csv
iacs/: alternate_yaml.py  architect.py  audit_system.py  cli.py  commands.py  etl_system.py  io_system.py  mcp_server.py  registrar.py  registry.py  transform_system.py  utils.py
iacs/builtins/: components.yaml  iacs.yaml
iacs/dataflows/: base_etl.py  derive_components.py  export_manifest.py  load_manifest.py  validate_registry.py
iacs/iacs_manifest/: format_guide.yaml  iacs.yaml  mcp_server.yaml
iacs/transforms/: audit_requirement_coverage.py  audit_todo.py  audit_traceability.py  entity_to_component.py  manifest_to_registry.py  normalize_components.py  validate_registry.py
iacs/views/: requirement_tree.py
notebooks/: audit_components.ipynb  explore_architect.ipynb  explore_duckdb.ipynb  explore_hamilton.ipynb  explore_iacs.ipynb  explore_ibis.ipynb  explore_registrar.ipynb  kill_kernels.sh  tree_data.json  tree_viewer.html
static/: d3_template.html  style.css  tree_viewer.html
templates/: index.html
tests/: conftest.py  test_api.py  test_cli.py  test_examples.py  test_human_validated.py  test_io_system.py  test_mcp_server.py  test_package.py  test_startup_performance.py  test_transform.py  test_transform_dataflow.py  test_utils.py
tests/audit_system/: test_audit.py  test_builtin_audits.py
tests/ecs_system/: test_io_system.py  test_registry.py
tests/test_dataflows/: test_alternate_yaml.py  test_architect.py  test_audit_dataflows.py  test_base_etl.py  test_derive_components.py  test_etl_system.py  test_examples.py  test_export_manifest.py  test_lineage.py  (+8 more)
(+67 files in other folders)
