[project]
name = "iacs"
version = "0.1.0"
description = "Infrastructure as Code Sketch"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.2",
    "flask>=3.0.0",
    "graphviz>=0.21",
    "ibis-framework[duckdb]>=2.0.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "pandas>=2.0.0",
    "pandera[ibis]>=0.25.0",
    "pydantic>=2.10.6",
    "pytest>=9.0.2",
    "pyyaml>=6.0",
    "sf-hamilton[sdk,ui]>=1.88.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
py-modules = ["app"]
packages = ["iacs"]
