[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iacs"
version = "0.1.5"
description = "Infrastructure as Code Sketch"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.2",
    "fastapi[standard]>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "graphviz>=0.21",
    "ibis-framework[duckdb]>=2.0.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "pandas>=2.0.0",
    "pandera[ibis]>=0.25.0",
    "pydantic>=2.10.6",
    "pytest>=9.0.2",
    "pyyaml>=6.0",
    "sf-hamilton[sdk,ui]>=1.88.0",
    "mcp>=1.27.0",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.27.0",
    "tabulate>=0.10.0",
]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
iacs-mcp = "iacs.mcp_server:main"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["iacs*"]

[tool.setuptools.package-data]
iacs = ["builtins/*.yaml", "iacs_manifest/*.yaml"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
]
